--- a/frontend/client/package.json
+++ b/frontend/client/package.json
@@ -11,11 +11,21 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/vue-fontawesome": "^2.0.2",
     "@popperjs/core": "^2.9.2",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1",
+    "rest-admin": "0.0.1",
+    "vee-validate": "^2.2.15",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-comment-grid": "^1.0.12",
+    "vue-router": "^3.5.2",
+    "vuex": "^3.6.2",
+    "vuex-persistedstate": "^4.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
